# cargo-newaoc

./: Cargo.toml  README.md
src/: lib.rs  main.rs  main_rs_template.rs
